
plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.5'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Spring Batch
    implementation 'org.springframework.boot:spring-boot-starter-batch'

    // SpringBoot + Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Spring Boot Email
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    //spring web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'junit:junit:4.13.1'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // h2 db
    runtimeOnly 'com.h2database:h2'

    // spring test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // queryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"

    // jakarta( annotations, persistence (ORM) )
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    //aop
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    //validation
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.5'

    //swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'


}

tasks.named('test') {
    useJUnitPlatform()
}
